# murrayc-opengl-experiments

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  README.md  configure.ac
res/: fragment_shader.frag  vertex_shader.vert
src/: CMakeLists.txt  buffer.cc  buffer.h  camera.cc  camera.h  main.cc  program.cc  program.h  shader.cc  shader.h  texture.cc  texture.h  transform.cc  transform.h  vertex.h  vertex_array.cc  vertex_array.h
tests/: CMakeLists.txt  test_example.cc  test_vertex.cc
